--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -10,7 +10,6 @@
     padding: 12px 92px 12px 16px;
     gap: 10px;
 
-
     border: 1px solid rgba(144, 149, 166, 0.5);
     border-radius: 40px;
     width: 100%;
@@ -29,6 +28,10 @@
     letter-spacing: -0.24px;
     background-color: transparent;
     color: rgba(27, 21, 61, 0.55);
+}
+
+.searchIcon {
+    cursor: pointer;
 }
 
 .inside-auto-layout {
